--- a/resources/config/config.properties
+++ b/resources/config/config.properties
@@ -1,3 +1,3 @@
-jdbcLoc=jdbc:sqlite:E:/PictoViewDB/database/pdb.db
-albumDirectory=E:/PictoViewDB/User/Albums/
-thumbnailDirectory=E:/PictoViewDB/User/Thumbnail/
+jdbcLoc=jdbc:sqlite:D:/PictoViewDB/database/pdb.db
+albumDirectory=D:/PictoViewDB/User/Albums/
+thumbnailDirectory=D:/PictoViewDB/User/Thumbnail/
