Added File upload feature

--- a/resources/config/config.properties
+++ b/resources/config/config.properties
@@ -1,3 +1,5 @@
 jdbcLoc=jdbc:sqlite:D:/PictoViewDB/database/pdb.db
 albumDirectory=D:/PictoViewDB/User/Albums/
 thumbnailDirectory=D:/PictoViewDB/User/Thumbnail/
+tempStorageDirectory=D:/PictoViewDB/temp/
+testStorageDirectory=D:/PictoViewDB/tests/
