Added Ratings and fixed testing framework

--- a/resources/config/config.properties
+++ b/resources/config/config.properties
@@ -1,4 +1,5 @@
 jdbcLoc=jdbc:sqlite:D:/PictoViewDB/database/pdb.db
+jdbcTestLoc=jdbc:sqlite:D:/PictoViewDB/database/test_pdb.db
 albumDirectory=D:/PictoViewDB/User/Albums/
 thumbnailDirectory=D:/PictoViewDB/User/Thumbnail/
 tempStorageDirectory=D:/PictoViewDB/temp/
